Updating to dedicated JDuino library
Co-authored-by: Tilman Holube <tilman@holube.de>

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
         <lombok.version>1.18.42</lombok.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -24,9 +31,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.fazecast</groupId>
-            <artifactId>jSerialComm</artifactId>
-            <version>2.11.4</version>
+            <groupId>com.github.schlunzis</groupId>
+            <artifactId>jduino</artifactId>
+            <version>88c29d8a745d5408191393e45659303aae454d7b</version>
         </dependency>
 
         <dependency>
@@ -53,6 +60,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.1</version>
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
