PoC custom character device channel
Co-authored-by: Tilman Holube <tilman@holube.de>

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.schlunzis.jduino</groupId>
-            <artifactId>serial</artifactId>
+            <artifactId>api</artifactId>
             <version>81790ab</version>
         </dependency>
 
